# 10x-MeL

./: .gitignore  README.md  dev.env  docker-compose.yml  pyproject.toml  start.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: issue-template.md
config/: README.md
data/: README.md  sample1.csv
services/web/: Dockerfile  manage.py  poetry_update_requirements.sh  requirements.txt
services/web/analyzer/: analyzer_lib.py  app.py  constraint_lib.py  query_processor_lib.py  session.py  text_processing.py  utils.py
services/web/analyzer/column_processor/: column_processor.py
services/web/analyzer/contrib/: autocat_lib.py  problem_detector.py
services/web/analyzer/data_view/: __init__.py  data_view_lib.py  handler.py  rich_data_view.py
services/web/analyzer/dataset/: __init__.py  dataset_lib.py  handler.py
services/web/analyzer/static/: index.html
services/web/analyzer/static/scripts/: analyzer.js  chart.js  data_view.js  dataset.js  query.js  transform.js  utils.js
services/web/analyzer/static/styles/: analyzer.css
services/web/analyzer/transforms/: enrichments_lib.py
services/web/analyzer/users/: __init__.py  users_lib.py
services/web/log/: README.md
services/web/tests/: test_analyzer_lib.py  test_constraint_lib.py  test_data_view.py  test_data_view_lib.py  test_match_resolver.py  test_patterns.py  test_transform_lib.py
