[tool.poetry]
name = "10x-mel"
version = "0.1.0"
description = ""
authors = ["Adam Gerber <adam.gerber@gsa.gov>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.1.1"
pandas = "1.0.3"
numpy = "1.18.2"
xlrd = "1.2.0"
flask_cors = "1.10.2"
black = "19.10b0"
pytest = "5.4.1"
nltk = "3.5"
scikit-learn = "^0.22"
spacy = "^2.2.4"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-2.2.5/en_core_web_lg-2.2.5.tar.gz"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
